# gnosis_vpn-client

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTION_SUMMARY.md  Cargo.toml  FAQ.md  LATEST  MIGRATION.md  ONBOARDING.md  README.md  SECURITY.md  config.toml  continuationprompt  deny.toml  documented-config.toml  flake.nix  gpg-publickey.asc  install.sh  justfile  neptun-spec.md  relayer-aliases.csv  renovate.json  taplo.toml  todo
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  renovate.json
.github/ISSUE_TEMPLATE/: actionable-issue.yml  config.yml
.github/scripts/: check-bench-names.sh  generate-metrics-docs.sh
.github/workflows/: build-binaries.yaml  build.yml  cache-deps.yaml  pr.yml  (+4 more)
docker/: Dockerfile  config.toml  monitor.sh  wgclient.conf  wrapper.sh
docs/: UPDATES.md  architecture.mmd  connection_sequence.mmd  minimal_routing_setup.mmd  neptun-phase3-4-blueprint.md  neptun-phase3-4-testing-guide.md  planned_architecture.mmd  routing-solutions.md  target_routing.mmd  testing.md
gnosis_vpn/: Cargo.toml
gnosis_vpn-ctl/: Cargo.toml
gnosis_vpn-ctl/src/: cli.rs  main.rs
gnosis_vpn-killswitch_tests/: Cargo.toml  build.rs
gnosis_vpn-lib/: Cargo.toml
gnosis_vpn-lib/src/: address.rs  app_nap.rs  balance.rs  channel_funding.rs  check_update.rs  command.rs  config.rs  connection.rs  connectivity_health.rs  destination_health.rs  dirs.rs  entry_node.rs  event.rs  external_event.rs  gvpn_client.rs  health.rs  hopr.rs  hopr_params.rs  info.rs  killswitch.rs  lib.rs  log_output.rs  logging.rs  manifest.rs  metrics.rs  monitor.rs  network.rs  node.rs  onboarding.rs  one_shot_tasks.rs  peer.rs  peer_id.rs  ping.rs  remote_data.rs  route_health.rs  serde_utils.rs  session.rs  shell_command_ext.rs  socket.rs  state.rs  (+11 more)
gnosis_vpn-lib/src/chain/: client.rs  constants.rs  contracts.rs  errors.rs  mod.rs
gnosis_vpn-lib/src/command/: balance_response.rs  mod.rs
gnosis_vpn-lib/src/compat/: mod.rs  safe_module.rs
gnosis_vpn-lib/src/config/: mod.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs
gnosis_vpn-lib/src/connection/: destination.rs  destination_health.rs  mod.rs  monitor.rs  options.rs  pseudonym_cache.rs
gnosis_vpn-lib/src/connection/down/: mod.rs  runner.rs
gnosis_vpn-lib/src/connection/up/: mod.rs  runner.rs  runner_post_wg.rs  runner_pre_wg.rs
gnosis_vpn-lib/src/core/: conn.rs  connection_runner.rs  deny_reason.rs  destination_health.rs  disconn.rs  disconnection_runner.rs  mod.rs  runner.rs
gnosis_vpn-lib/src/edge_contrib/: EXAMPLES.md  README.md  identity.rs  mod.rs  safe_deployment.rs  safe_persistence.rs
gnosis_vpn-lib/src/event/: incoming.rs  mod.rs  outgoing.rs
gnosis_vpn-lib/src/hopr/: api.rs  blokli_config.rs  chain.rs  config.rs  errors.rs  identity.rs  mod.rs  strategy_config.rs  types.rs
gnosis_vpn-lib/src/killswitch/: linux.rs  macos.rs  mod.rs
gnosis_vpn-lib/src/node/: mod.rs  onboarding.rs
gnosis_vpn-lib/src/old_connection/: mod.rs
gnosis_vpn-lib/src/routing/: linux.rs  macos.rs  mod.rs
gnosis_vpn-lib/src/session/: capability.rs  mod.rs  path.rs  protocol.rs
gnosis_vpn-lib/src/socket/: fd_passing.rs  mod.rs  root.rs  worker.rs
gnosis_vpn-lib/src/wg_tunnel/: mod.rs  pump.rs  session.rs  tun.rs  tunnel.rs  udp.rs
gnosis_vpn-lib/src/wireguard/: config.rs  kernel.rs  mod.rs  tooling.rs  userspace.rs
gnosis_vpn-lib/tests/: dirs_env_override.rs  dynamic_wg_routing_e2e.rs  dynamic_wg_routing_integration.rs  socket_types.rs  worker_bootstrap.rs
gnosis_vpn-lib/tests/common/: mod.rs
gnosis_vpn-lib/tests/fixtures/: linux-amd64.json  linux-arm64.json  macos-arm64.json
gnosis_vpn-root/: Cargo.toml  build.rs
gnosis_vpn-root/routing/: linux.rs  macos.rs
gnosis_vpn-root/scripts/: pfctl-setup.sh
gnosis_vpn-root/src/: cli.rs  device_monitor.rs  main.rs  network_info.rs  routing_actor.rs  update_paths.rs  user.rs  wg_tooling.rs  worker.rs
gnosis_vpn-root/src/device_monitor/: linux.rs  macos.rs  mod.rs
gnosis_vpn-root/src/device_monitor/linux/: ip_json.rs  ip_text.rs  mod.rs  rtnetlink.rs
gnosis_vpn-root/src/routing/: bypass.rs  dns.rs  iptables_ops.rs  ipv6_blackhole.rs  killswitch.rs  linux.rs  macos.rs  manager.rs  mocks.rs  mod.rs  netlink_ops.rs  nftables_ops.rs  route_ops.rs  route_ops_linux.rs  route_ops_macos.rs  shell_ops.rs  sweep.rs  tun.rs  wg_ops.rs
gnosis_vpn-root/src/routing/dynamic/: linux.rs  macos.rs  mod.rs
gnosis_vpn-root/src/routing/static_/: linux.rs  mod.rs
gnosis_vpn-root/src/routing/util/: linux.rs  macos.rs  mod.rs
gnosis_vpn-root/src/routing_actor/: linux.rs  stub.rs
gnosis_vpn-root/src/wg_tooling/: linux.rs  macos.rs  mod.rs
gnosis_vpn-root/tests/: tun_fd_pass.rs
gnosis_vpn-system_tests/: Cargo.toml
gnosis_vpn-system_tests/src/: cli.rs  download.rs  main.rs  report.rs  workflow.rs
gnosis_vpn-system_tests/src/fixtures/: control_client.rs  lib.rs  mod.rs  service.rs  service_guard.rs  system_test_config.rs
gnosis_vpn-worker/: Cargo.toml
gnosis_vpn-worker/src/: cli.rs  init.rs  main.rs
gnosis_vpn/src/: cli.rs  core.rs  event.rs  hopr_params.rs  main.rs  session.rs
gnosis_vpn/src/core/: conn.rs  conn_down.rs  conn_up.rs  connection_runner.rs  disconn.rs  disconnection_runner.rs  event_loop.rs  funding_runner.rs  gvpn_client_runner.rs  hopr_runner.rs  mod.rs  onboarding_runner.rs  presafe_runner.rs  run_mode.rs  runner.rs  runner_results.rs  safe_deployment_runner.rs  ticket_stats_runner.rs
gnosis_vpn/tests/: system_test.rs
gnosis_vpn/tests/fixtures/: mod.rs  wg-server.rs
installer/: .gitignore  Distribution.xml  README.md  build-pkg.sh  sign-pkg.sh  test-installer.sh  uninstall.sh
network-config/: rotsee.toml
nfpm/: config.toml  gnosisvpn.service  install.sh  nfpm.yaml  uninstall.sh
nix/: builder.nix  docker-builder.nix  docker.nix  gnosisvpn.nix  mkPackage.nix  rust-builder.nix  rust-package.nix  shell.nix
scripts/: run-system-tests.rs  run-system-tests.sh  vpn-smoke-test.sh
talpid-core/: Cargo.toml
talpid-dbus/: Cargo.toml
talpid-routing/: Cargo.toml
talpid-tunnel/: Cargo.toml
talpid-types/: Cargo.toml
(+13 files in other folders)
