[workspace]
members  = ["gnosis_vpn*"]
resolver = "2"

[workspace.package]
edition      = "2024"
license      = "LGPL-3.0-only"
rust-version = "1.94"
version      = "0.93.0"

[workspace.metadata.crane]
name = "gnosis_vpn"

[workspace.dependencies]
anyhow = { version = "~1.0.103" }
async-trait = "~0.1.89"
backon = { version = "~1.6.0" }
base64 = "~0.22.1"
bytesize = "~2.4.0"
cfg-if = "~1.0.4"
chrono = { version = "~0.4.45", default-features = false, features = [
  "clock",
  "serde",
  "std",
] }
clap = { version = "~4.6.1", features = ["derive", "env"] }
clap_complete = "~4.6.5"
edgli = { git = "https://github.com/hoprnet/edge-client.git", rev = "ee0e1baf76789dfe5ac6bb760832162a82c7eb7d", features = [
  "blokli",
  "telemetry",
] }
exitcode = "~1.1.2"
futures = "~0.3.32"
futures-util = "~0.3.32"
hopr-utils-session = { git = "https://github.com/hoprnet/hoprnet", rev = "118c4951f907bae5ca39083404f88357f2fa3722", features = [
  "runtime-tokio",
] }
human-bandwidth = "~0.1.4"
humantime = "~2.3.0"
humantime-serde = "~1.1.1"
ipnetwork = "~0.21.1"
libc = "~0.2.186"
mnl = "~0.3.1"
multiaddr = "~0.18.2"
neptun = { git = "https://github.com/NordSecurity/neptun.git", tag = "v3.0.0" }
nftnl = "~0.9.2"
notify = "~8.2.0"
pfctl = "~0.7.0"
ping = "~0.7.1"
rand = "~0.10.1"
reqwest = { version = "~0.13.4", features = ["blocking", "json"] }
rtnetlink = "~0.21.0"
rustix = { version = "~1.1.4", features = ["net", "pipe", "stdio"] }
serde = { version = "~1.0.228", features = ["derive"] }
serde-saphyr = "~0.0.28"
serde_json = "~1.0.150"
serde_with = "~3.21.0"
tempfile = "~3.27.0"
thiserror = "~2.0.18"
tikv-jemallocator = "~0.7.0"
tokio = { version = "~1.52.3", features = ["full"] }
tokio-util = { version = "~0.7.18", features = ["rt"] }
toml = "~1.1.2"
tracing = { version = "~0.1.44", features = ["release_max_level_debug"] }
tracing-subscriber = "~0.3.23"
unix-ancillary = "~0.2.2"
url = { version = "~2.5.8", features = ["serde"] }
uzers = "~0.12.2"
x25519-dalek = { version = "~2.0.1", features = [
  "getrandom",
  "static_secrets",
] }

objc2 = "~0.6.4"
objc2-foundation = { version = "~0.3.2", features = [
  "NSProcessInfo",
  "NSString",
] }

gnosis_vpn-lib = { path = "gnosis_vpn-lib" }

# this profile focuses on the best runtime performance and the smallest binary size
[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = 3
panic         = "abort"
strip         = true
