[package]
name = "gnosis_vpn-ctl"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
clap.workspace = true
exitcode.workspace = true
gnosis_vpn-lib.workspace = true
serde_json.workspace = true

# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { workspace = true }
