[package]
edition = { workspace = true }
license = { workspace = true }
name    = "gnosis_vpn-ctl"
version = { workspace = true }

[dependencies]
clap.workspace           = true
exitcode.workspace       = true
gnosis_vpn-lib.workspace = true
humantime.workspace      = true
reqwest.workspace        = true
serde-saphyr.workspace   = true
serde_json.workspace     = true
tokio.workspace          = true

# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { workspace = true }
