[package]
name = "gnosis_vpn-lib"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff.workspace = true
bincode.workspace = true
crossbeam-channel = { workspace = true }
directories = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
libp2p-identity = { workspace = true }
ping = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
