[package]
name = "gnosis_vpn-lib"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-lock.workspace = true
backoff.workspace = true
bytesize = { workspace = true, features = ["serde"] }
crossbeam-channel.workspace = true
directories.workspace = true
edgli.workspace = true
human-bandwidth = { workspace = true, features = ["serde"] }
humantime.workspace = true
humantime-serde.workspace = true
ping.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
