[package]
name = "gnosis_vpn-root"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
clap.workspace = true
exitcode.workspace = true
gnosis_vpn-lib.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
humantime.workspace = true

# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = { workspace = true }
iptables = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
anyhow.workspace = true
