[package]
name = "gnosis_vpn"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
crossbeam-channel.workspace = true
ctrlc = { workspace = true }
exitcode.workspace = true
gnosis_vpn-lib = { workspace = true }
humantime.workspace = true
libp2p-identity = { workspace = true }
notify.workspace = true
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
