[package]
name = "gnosis_vpn"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
crossbeam-channel.workspace = true
ctrlc.workspace = true
edgli.workspace = true
exitcode.workspace = true
gnosis_vpn-lib.workspace = true
notify.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
backoff.workspace = true
rand.workspace = true
alloy.workspace = true
uuid.workspace = true

# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { workspace = true }
