[package]
name = "talpid-core"
description = "Privacy preserving and secure VPN client library"

[dependencies]
chrono = { version = "0.4.26", default-features = false }
thiserror = { workspace = true }
futures = "0.3.15"
ipnetwork = "0.20"
libc = "0.2"
log = "0.4"
parking_lot = "0.12.0"
rand = "0.8.5"
talpid-routing = { path = "../talpid-routing" }
talpid-tunnel = { path = "../talpid-tunnel" }
# talpid-tunnel-config-client = { path = "../talpid-tunnel-config-client" }
talpid-types = { path = "../talpid-types" }
# talpid-wireguard = { path = "../talpid-wireguard" }
tokio = { version = "1.44", features = ["process", "rt-multi-thread", "fs"] }

nix = { version = "0.30.1", features = ["mount"] }
inotify = "0.10"
resolv-conf = "0.7"
nftnl = { version = "0.7.0", features = ["nftnl-1-1-0"] }
mnl = { version = "0.2.2", features = ["mnl-1-0-4"] }
which = { version = "4.0", default-features = false }
talpid-dbus = { path = "../talpid-dbus" }
duct = "0.13"
